--- a/testing.css
+++ b/testing.css
@@ -169,3 +169,33 @@ body .client-logo{
 }
 
 
+body .how-works, .learn-more{
+    padding: 100px 120px 0 120px;
+
+
+}
+
+body .how-works h2{
+    font-size: 48px;
+    line-height: 56px;
+    font-weight: 700;
+    color: white;
+    text-wrap: nowrap;
+
+    
+}
+
+body .how-works p, .learn-more p{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 25.6px;
+    color: white;
+
+}
+
+body .box{
+    padding-right: 120px;
+    padding-bottom: 50px;
+
+}
+
