css: mobile responsiveness max-width 576px

--- a/testing.css
+++ b/testing.css
@@ -199,3 +199,93 @@ body .box{
 
 }
 
+
+
+
+
+
+
+
+
+/* MOBILE RESPONSIVENESS */
+
+@media (max-width:576px) {
+
+    header .discover h1{
+        font-size: 28px;
+        line-height: 36px;
+        text-align: start;
+        }
+
+        header .discover p{
+            font-size: 12px;
+            text-align: start;
+            line-height: 16px;
+        }
+
+        header .cta-explore{
+            padding: 10px 20px;
+        }
+        
+        header .cta-create{
+            padding: 10px 20px;
+        }
+
+
+        header .stats{
+            align-items: center;
+            width: 80%;
+            height: auto;
+            align-items: center;
+            gap: 5px;
+            margin-bottom: 5px;
+
+        }
+
+
+        header .stat-item{
+            width: 100%;
+            height: fit-content;
+            display: flex;
+            flex-direction: column;
+            color: white;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding-top: 1rem;
+        }
+
+
+
+        header .stat-item h3{
+            font-size: 20px;
+            line-height: 20px;
+            font-weight: 700;
+        
+        }
+        header .stat-item p{
+            font-size: 10px;
+            line-height: 14px;
+            font-weight: 400;
+        }
+
+
+        body .client-logo{
+            width: 100%;
+            justify-content: center;
+            align-items: center;
+            height: 10vh;
+            padding: 10px 10px;
+        
+        }
+        
+        
+
+
+        
+        
+        
+        
+    
+}
