--- a/style.css
+++ b/style.css
@@ -212,9 +212,9 @@ body .box{
 @media (max-width:576px) {
 
     header .discover h1{
-        font-size: 28px;
+        font-size: 18px;
         line-height: 36px;
-        text-align: start;
+        text-align: center;
         }
 
         header .discover p{
@@ -234,9 +234,9 @@ body .box{
 
         header .stats{
             align-items: center;
-            width: 80%;
+            width: 100%;
             height: auto;
-            align-items: center;
+            align-items: start;
             gap: 5px;
             margin-bottom: 5px;
 
@@ -244,7 +244,7 @@ body .box{
 
 
         header .stat-item{
-            width: 100%;
+            width: 90%;
             height: fit-content;
             display: flex;
             flex-direction: column;
@@ -272,13 +272,37 @@ body .box{
 
 
         body .client-logo{
-            width: 100%;
+            width: 90%;
             justify-content: center;
             align-items: center;
             height: 10vh;
             padding: 10px 10px;
+        }
+
+
+        .navitem1{
+            width: 60%;
+            justify-content: flex-start;
+            gap: 5px;
         
         }
+        
+        .navitem2{
+            width: 40%;
+            justify-content: flex-end;
+            gap: 5px;
+        
+        }
+
+
+        header nav .signup-button{
+            padding: 5px 10px;        
+        }
+        
+        header div ul li{
+            font-size: 12px;
+        }
+        
         
         
 
