mobile responsiveness header and content-box

--- a/style.css
+++ b/style.css
@@ -211,8 +211,18 @@ body .box{
 
 @media (max-width:576px) {
 
+    header{
+        background-image: url(./imgs/image\ 77.png);
+        background-size: cover;
+        width: 100%;
+        height: fit-content;
+        top: 20px;
+        left: 0px;
+    
+
+
     header .content-box{
-        padding: 20px 10px;
+        padding: 60px 30px;
     }
     
 
