--- a/style.css
+++ b/style.css
@@ -199,7 +199,58 @@ body .box{
 
 }
 
+body .how-works{
+    color: white;
+    font-size: 48px;
+    line-height: 56px;
+    font-weight: 700;
+}
 
+body .learn-more a{
+    text-decoration: none;
+    color: white;
+}
+
+body .learnmore-btn{
+    border: none;
+    background: linear-gradient(to right, #6477DD, #C753C1, #DC1DC3);
+    padding: 12px 24px;
+
+}
+
+body .box1, .box2{
+    padding-bottom: 5px;
+    padding-right: 120px;
+}
+
+body .rectangle{
+    background-image: url(./imgs/Rectangle\ 52.png);
+    position: relative;
+    background-repeat: no-repeat;
+    color: white;
+    padding: 90px 30px;
+
+}
+
+body .rectangle img{
+    position: absolute;
+    top: 7%;
+    left: 8%;
+    width: 4vw;
+
+}
+
+body .rectangle h4{
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 27px;
+}
+
+body .rectangle p{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+}
 
 
 
