--- a/style.css
+++ b/style.css
@@ -1,634 +1,267 @@
-*{
-    padding: 0;
+*{padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
-}
-
-body{
-    background-color: rgb(17, 2, 41);
-
-
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 header{
+    width: 1400px;
+    height: 840px;
     background-image: url(./imgs/image\ 77.png);
     background-size: cover;
-    width: 100%;
-    height: fit-content;
+    background-repeat: no-repeat;
     top: 20px;
-    left: 20px;
-    
+    left: -20px;
+    overflow: hidden;
 }
 
+body{
+    background: #110229;
+}
 
-.navbar1{
+#collapsibleNavId{
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    /* padding-right: 20px; */
-    padding: 45px 120px;
 }
 
-.navitem1{
+
+nav .navbar-nav{
     width: 70%;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    /* align-items: center; */
-    list-style: none;
-    gap: 1.5rem;
-
+    gap: 1rem;
 }
 
-.navitem2{
+nav .navbar-nav2{
     width: 30%;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    /* align-items: center; */
-    list-style: none;
-    gap: 1.5rem;
-
 }
 
-header nav .signup-button{
-    color: white;
+nav .navbar-nav2 button{
     border: none;
-    padding: 6px 24px;
+    padding: 6px 12px;
     background: linear-gradient(to right, #6477DD, #C753C1, #DC1DC3);
-
 }
 
 
-nav div ul li{
+nav .navbar-nav2 button a {
     color: white;
 }
 
-header .content-box{
+nav .navbar-nav2 .login{
+    color: white;
+}
+
+nav .navbar-nav2 .login:hover{
+    color: blue;
+}
+
+
+
+
+
+.wrapper-div{
     display: flex;
     flex-direction: column;
+    gap: 2rem;
     width: 100%;
-    padding: 80px 0 70px 120px;
+    padding: 188px 120px;
 }
 
-
-header .discover{
-    display: flex;
-    flex-direction: column;
+.contentbox1{
     width: 40%;
-    padding-bottom: 1rem;
-}
-
-header .discover h1{
-color: white;
-font-size: 64px;
-line-height: 80.01px;
-font-weight: 700;
-}
-
-header .discover p{
     color: white;
+}
+
+.contentbox1 h2{
+    font-size: 64px;
+    line-height: 80.01px;
+    font-weight: 700;
+}
+
+.contentbox1 p{
     font-size: 16px;
     line-height: 24px;
     font-weight: 400;
 }
 
-/* .header .stat-wrapper{
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    padding-bottom: 10rem;
-} */
-
-header .stats{
+.cta-btns{
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 30%;
-    height: fit-content;
-    background-color: #FFFFFF1A;
-    gap: 2rem;
+    gap: 26px;
 }
 
-
-header .stat-item{
-    width: 25%;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-top: 1rem;
-    
-}
-
-header .stat-item h3{
-    font-size: 36px;
-    line-height: 40px;
-    font-weight: 700;
-
-}
-header .stat-item p{
-    font-size: 16px;
-    line-height: 21.79px;
-    font-weight: 400;
-
-}
-
-header .cta-buttons{
-    display: flex;
-    flex-direction: row;
-    gap: 1rem;
-    padding-bottom: 3rem;
-}
-
-header .cta-explore{
-    padding: 16px 32px;
+.explore-btn{
     border: none;
+    color: white;
+    padding: 16px 32px;
     background: linear-gradient(to right, #6477DD, #C753C1, #DC1DC3);
-    color: white;
-}
-header .cta-create{
-    padding: 16px 32px;
-    border: none;
-    color: white;
-    border: 1px solid #C753C1;
-    background: transparent;
-    
 }
 
-body .client-logo{
+.create-btn{
+    border: 1px solid #C753C1;
+    color: white;
+    padding: 16px 32px;
+    background: transparent;
+}
+
+.stats{
+    width: 500px;
+    height: 120px;
+    display: flex;
+    flex-direction: row;
+    gap: 69px;
+    background: #21253C;
+    color: white;
+    padding: 33px 48px 15px 48px;
+
+}
+
+.active-user{
+    width: 166.66px;
+    display: flex;
+    flex-direction: column;
+    text-wrap: nowrap;
+}
+
+.artworks{
+    width: 166.66px;
+    display: flex;
+    flex-direction: column;
+}
+
+.artists{
+    width: 166.66px;
+    display: flex;
+    flex-direction: column;
+}
+
+.client-logos{
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: row;
+    gap: 81px;
+    padding: 120px 120px;
+}
+
+
+.client-logos div img{
+    width: 10vw;
+}
+
+.amazon-logo{
+    width: 20%;
+    display: flex;
+    flex-direction: row;
+}
+
+.slack-logo{
+    width: 20%;
+    display: flex;
+    flex-direction: row;
+}
+
+.paradigm-logo{
+    width: 20%;
+    display: flex;
+    flex-direction: row;
+}
+
+.chase-logo{
+    width: 20%;
+    display: flex;
+    flex-direction: row;
+}
+
+.binance-logo{
+    width: 20%;
+    display: flex;
+    flex-direction: row;
+}
+
+.contentbox2{
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: 30vh;
-    padding: 60px 120px;
-    gap: 5rem;
 }
 
-body .amazon-logo{
+.contentbox2 aside:nth-child(1){
+    width: 40%;
     display: flex;
-    flex-direction: row;
-    width: 20%;
-    height: fit-content;
-}
-body .slack-logo{
-    display: flex;
-    flex-direction: row;
-    width: 20%;
-    height: fit-content;
-}
-body .paradigm-logo{
-    display: flex;
-    flex-direction: row;
-    width: 20%;
-    height: fit-content;
-}
-body .chase-logo{
-    display: flex;
-    flex-direction: row;
-    width: 20%;
-    height: fit-content;
-}
-body .binance-logo{
-    display: flex;
-    flex-direction: row;
-    width: 18%;
-    height: fit-content;
-}
-body .amazon-logo{
-    display: flex;
-    flex-direction: row;
-    width: 18%;
-    height: fit-content;
+    flex-direction: column;
+    color: white;
+    gap: 20px;
+    padding: 120px 120px;
 }
 
-
-body .how-works, .learn-more{
-    padding: 100px 120px 0 120px;
-
-
-}
-
-body .how-works h2{
+.contentbox2 aside:nth-child(1) h2{
     font-size: 48px;
     line-height: 56px;
     font-weight: 700;
-    color: white;
-    text-wrap: nowrap;
-
-    
 }
-
-body .how-works p, .learn-more p{
+.contentbox2 aside:nth-child(1) p{
     font-size: 16px;
-    font-weight: 400;
     line-height: 25.6px;
-    color: white;
-
+    font-weight: 400;
 }
 
-body .box{
-    padding-right: 120px;
-    padding-bottom: 50px;
-
-}
-
-body .how-works{
-    color: white;
-    font-size: 48px;
-    line-height: 56px;
-    font-weight: 700;
-}
-
-body .learn-more a{
-    text-decoration: none;
-    color: white;
-}
-
-body .learnmore-btn{
+.learnmore-btn{
     border: none;
+    color: white;
     background: linear-gradient(to right, #6477DD, #C753C1, #DC1DC3);
-    padding: 12px 24px;
-
+    padding: 16px 32px;
 }
 
-body .box1, .box2{
-    padding-bottom: 5px;
-    padding-right: 120px;
+
+
+
+
+.contentbox2 aside:nth-child(2){
+    width: 60%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 3rem;
 }
 
-body .rectangle{
+aside:nth-child(2) .rectangle{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
     background-image: url(./imgs/Rectangle\ 52.png);
     position: relative;
     background-repeat: no-repeat;
+    background-size: cover;
     color: white;
-    padding: 90px 30px;
+    padding: 84px 32px  0px 32px;
 
 }
 
-body .rectangle img{
+aside:nth-child(2) .rectangle img{
+    width: 60px;
+    height: 60px;
     position: absolute;
-    top: 7%;
-    left: 8%;
-    width: 4vw;
-
+    top: 16px;
+    left: 32px;
 }
 
-body .rectangle h4{
+aside:nth-child(2) .rectangle h5{
     font-size: 24px;
-    font-weight: 700;
     line-height: 27px;
-}
-
-body .rectangle p{
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 21px;
-}
-
-
-
-
-
-
-
-/* MOBILE RESPONSIVENESS */
-
-@media (max-width:576px) {
-
-    header{
-        background-image: none;
-        
-    }
-    
-
-
-    header .content-box{
-        padding: 80px 90px 70px 90px;
-    }
-    
-
-    header .discover{
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-    }
-    
-
-    header .discover h1{
-        font-size: 22px;
-        line-height: 36px;
-        text-align: start;
-        }
-
-        header .discover p{
-            font-size: 12px;
-            text-align: start;
-            line-height: 16px;
-        }
-
-        header .cta-explore{
-            padding: 10px 20px;
-        }
-        
-        header .cta-create{
-            padding: 10px 20px;
-        }
-
-
-        header .stats{
-            width: 100%;
-            height: auto;
-            align-items: start;
-            gap: 5px;
-            margin-bottom: 5px;
-
-        }
-
-
-        header .stat-item{
-            width: 90%;
-            height: fit-content;
-            display: flex;
-            flex-direction: column;
-            color: white;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            padding-top: 1rem;
-        }
-
-
-
-        header .stat-item h3{
-            font-size: 20px;
-            line-height: 20px;
-            font-weight: 700;
-        
-        }
-        header .stat-item p{
-            font-size: 10px;
-            line-height: 14px;
-            font-weight: 400;
-        }
-
-
-        .navitem1{
-            width: 60%;
-            justify-content: flex-start;
-            gap: 5px;
-        
-        }
-        
-        .navitem2{
-            width: 40%;
-            justify-content: flex-end;
-            gap: 5px;
-        
-        }
-
-
-        header nav .signup-button{
-            padding: 5px 10px;        
-        }
-        
-        header div ul li{
-            font-size: 12px;
-        }
-
-        body .client-logo{
-            flex-direction: column;
-            padding: 100px 90px 70px 50px;
-            gap: 2vh;
-
-        }
-
-        body .client-logo img{
-            width: 40vw;
-        }
-
-        
-        body .how-worksbox{
-            display: flex;
-            flex-direction: column;
-            width: 100vw;
-            padding: 80px 90px 70px 90px;
-
-
-        }
-
-
-        body .rectangle h4{
-            font-size: 18px;
-            line-height: 16px;
-            text-align: center;
-        }
-        
-        body .rectangle p{
-            font-size: 12px;
-            line-height: 15px;
-            text-align: center;
-        }
-
-        
-        
-    }      
-    
-
-
-
-
-
-.subscribe {
-    background-color: #110229;
-    width: 100vh;
-    
-}
-
-.subscribe .div1 {
-    display: flex;
-    flex-direction: row;
-    width: 85vw;
-    height: 25vw;
-    background: #FFFFFF1A;
-    margin: 5vw 9vw;
-    
-}
-.subscribe .div1 aside:nth-child(1) {
-    padding: 5vw 3vw;
-}
-.subscribe .div1 aside:nth-child(1) h1 {
-    font-size: 42px;
     font-weight: 700;
-    color: #FFFFFF;
-    
+    text-wrap: nowrap;
 }
-.subscribe .div1 aside:nth-child(1) p {
-    font-size: 16px;
+
+aside:nth-child(2) .rectangle p{
+    font-size: 14px;
+    line-height: 21px;
     font-weight: 400;
-    color: #DEDEDE;
-    line-height: 24px;
-    padding-top: 10px;
-}
-.subscribe .div1 aside:nth-child(1) .email {
-    width: 100%;
-    height: 3rem;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-.subscribe .div1 aside:nth-child(1) .email input{
-    flex: 1;    
-    height: 100%;
-    border: none;
-    background : rgba(255, 255, 255, 0.3);
-    padding: 10px 10px;
-    outline: none;
-    
-    
-}
-.subscribe .div1 aside:nth-child(1) input::placeholder {
-    font-size: 16px;
-    font-weight: 400;
-    text-align: left;
-    color: #FFFFFF;
-    padding-left: 1vw;
-
-   
-
-}
-.subscribe .div1 aside:nth-child(1) button {
-      height: 100%;
-      padding: 0 32px ;
-      border: none;
-      background: linear-gradient(93.95deg, #6A76DB 0.87%, #B65AC6 49.01%, #D924C3 99.65%);
-      font-family: Open Sans;
-      font-size: 18px;
-      font-weight: 600;
-      color: #FFFFFF;
-
-}
-.subscribe .div1 aside:nth-child(2) {
-    position: relative;
-}
-.subscribe .div1 aside:nth-child(2) img {
-    width: 338px;
-    margin-right: 80px;
-    height: 342px;
-    
-
-    
-}
-
-.footer1 {
-    background: #110229;
-     width: 100%;
-
-}
-.footer1 .footer-links {
-display: flex;
-flex-direction: row;
-padding: 5vw 1vw;
- width: 100%;
- margin-left: 40px;
-
-}
-.footer1 .footer-links .marketplace {
-    width: 22%;
-    
-
-}
-.footer1 .footer-links .resources {
-    width: 22%;
-}
-.footer1 .footer-links .community {
-      width: 22%;
-}
-.footer1 .footer-links .newsletter {
-      width: 30%;
-      padding: 0 10px;
-      margin-left: 100px;
-}
-
-.footer1 .footer-links ul {
-list-style: none;
-}
-
-.footer1 .footer-links div ul li a {
-      text-decoration: none;
-      font-size: 16px;
-      font-weight: 400;
-      text-align: left;
-      color: #DEDEDE;
-      line-height: 3vw;
-      
-
-
-}
-.footer1 .footer-links div ul h4 a {
-      font-family: DM Sans;
-      font-size: 24px;
-      font-weight: 700;
-      line-height: 31px;
-      text-align: left;
-      color: #FFFFFF;
-      
-
- 
-}
-.footer1 .footer-links div p {
-      font-weight: 400;
-      font-size: 16px;
-      color: #DEDEDE;
-      text-wrap: wrap;
-}
-.footer1 .footer-links .images {
-    padding-left: 20px;
-    padding-top: 10px;
-    
-}
-.footer1 .footer-links .images img {
-    margin-left: 1rem;
 }
 
 
 
-
-
-
-
-
-
-
-@media (max-width: 1000px) {
-    .subscribe .div1 {
-        height: fit-content;
-}
-.footer1 .footer-links div {
-    margin-left: 5rem;
-}
-
-}
-
-@media (max-width: 612px) {
-    .subscribe .div1 aside:nth-child(1) input{
-       width: 300px;
-    
-}
-    .subscribe .div1 {
-        margin: 7vw 20vw;
-    }
-    .footer1 .footer-links div {
-        margin-left: 3rem;
-    }
-}
