--- a/testing.css
+++ b/testing.css
@@ -27,7 +27,8 @@ header{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    padding-right: 20px;
+    /* padding-right: 20px; */
+    padding: 45px 120px;
 }
 
 .navitem1{
@@ -35,7 +36,7 @@ header{
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    align-items: center;
+    /* align-items: center; */
     list-style: none;
     gap: 1.5rem;
 
@@ -45,8 +46,8 @@ header{
     width: 30%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-end;
+    /* align-items: center; */
     list-style: none;
     gap: 1.5rem;
 
@@ -55,7 +56,7 @@ header{
 header nav .signup-button{
     color: white;
     border: none;
-    padding: 12px 24px;
+    padding: 6px 24px;
     background: linear-gradient(to right, #6477DD, #C753C1, #DC1DC3);
 
 }
@@ -66,11 +67,16 @@ nav div ul li{
 }
 
 header .content-box{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     padding: 80px 0 70px 120px;
 }
 
 
 header .discover{
+    display: flex;
+    flex-direction: column;
     width: 40%;
     padding-bottom: 1rem;
 }
@@ -165,7 +171,44 @@ body .client-logo{
     align-items: center;
     height: 30vh;
     padding: 60px 120px;
+    gap: 5rem;
+}
 
+body .amazon-logo{
+    display: flex;
+    flex-direction: row;
+    width: 20%;
+    height: fit-content;
+}
+body .slack-logo{
+    display: flex;
+    flex-direction: row;
+    width: 20%;
+    height: fit-content;
+}
+body .paradigm-logo{
+    display: flex;
+    flex-direction: row;
+    width: 20%;
+    height: fit-content;
+}
+body .chase-logo{
+    display: flex;
+    flex-direction: row;
+    width: 20%;
+    height: fit-content;
+}
+body .binance-logo{
+    display: flex;
+    flex-direction: row;
+    width: 18%;
+    height: fit-content;
+}
+body .amazon-logo{
+    display: flex;
+    flex-direction: row;
+    width: 18%;
+    height: fit-content;
 }
 
 
@@ -340,15 +383,6 @@ body .rectangle p{
         }
 
 
-        body .client-logo{
-            width: 90%;
-            justify-content: center;
-            align-items: center;
-            height: 10vh;
-            padding: 10px 10px;
-        }
-
-
         .navitem1{
             width: 60%;
             justify-content: flex-start;
@@ -371,5 +405,230 @@ body .rectangle p{
         header div ul li{
             font-size: 12px;
         }
+
+        body .client-logo{
+            flex-direction: column;
+            padding: 100px 90px 70px 50px;
+            gap: 2vh;
+
+        }
+
+        body .client-logo img{
+            width: 40vw;
+        }
+
+        
+        body .how-worksbox{
+            display: flex;
+            flex-direction: column;
+            width: 100vw;
+            padding: 80px 90px 70px 90px;
+
+
+        }
+
+
+        body .rectangle h4{
+            font-size: 18px;
+            line-height: 16px;
+            text-align: center;
+        }
+        
+        body .rectangle p{
+            font-size: 12px;
+            line-height: 15px;
+            text-align: center;
+        }
+
+        
+        
     }      
     
+
+
+
+
+
+.subscribe {
+    background-color: #110229;
+    width: 100vh;
+    
+}
+
+.subscribe .div1 {
+    display: flex;
+    flex-direction: row;
+    width: 85vw;
+    height: 25vw;
+    background: #FFFFFF1A;
+    margin: 5vw 9vw;
+    
+}
+.subscribe .div1 aside:nth-child(1) {
+    padding: 5vw 3vw;
+}
+.subscribe .div1 aside:nth-child(1) h1 {
+    font-size: 42px;
+    font-weight: 700;
+    color: #FFFFFF;
+    
+}
+.subscribe .div1 aside:nth-child(1) p {
+    font-size: 16px;
+    font-weight: 400;
+    color: #DEDEDE;
+    line-height: 24px;
+    padding-top: 10px;
+}
+.subscribe .div1 aside:nth-child(1) .email {
+    width: 100%;
+    height: 3rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.subscribe .div1 aside:nth-child(1) .email input{
+    flex: 1;    
+    height: 100%;
+    border: none;
+    background : rgba(255, 255, 255, 0.3);
+    padding: 10px 10px;
+    outline: none;
+    
+    
+}
+.subscribe .div1 aside:nth-child(1) input::placeholder {
+    font-size: 16px;
+    font-weight: 400;
+    text-align: left;
+    color: #FFFFFF;
+    padding-left: 1vw;
+
+   
+
+}
+.subscribe .div1 aside:nth-child(1) button {
+      height: 100%;
+      padding: 0 32px ;
+      border: none;
+      background: linear-gradient(93.95deg, #6A76DB 0.87%, #B65AC6 49.01%, #D924C3 99.65%);
+      font-family: Open Sans;
+      font-size: 18px;
+      font-weight: 600;
+      color: #FFFFFF;
+
+}
+.subscribe .div1 aside:nth-child(2) {
+    position: relative;
+}
+.subscribe .div1 aside:nth-child(2) img {
+    width: 338px;
+    margin-right: 80px;
+    height: 342px;
+    
+
+    
+}
+
+.footer1 {
+    background: #110229;
+     width: 100%;
+
+}
+.footer1 .footer-links {
+display: flex;
+flex-direction: row;
+padding: 5vw 1vw;
+ width: 100%;
+ margin-left: 40px;
+
+}
+.footer1 .footer-links .marketplace {
+    width: 22%;
+    
+
+}
+.footer1 .footer-links .resources {
+    width: 22%;
+}
+.footer1 .footer-links .community {
+      width: 22%;
+}
+.footer1 .footer-links .newsletter {
+      width: 30%;
+      padding: 0 10px;
+      margin-left: 100px;
+}
+
+.footer1 .footer-links ul {
+list-style: none;
+}
+
+.footer1 .footer-links div ul li a {
+      text-decoration: none;
+      font-size: 16px;
+      font-weight: 400;
+      text-align: left;
+      color: #DEDEDE;
+      line-height: 3vw;
+      
+
+
+}
+.footer1 .footer-links div ul h4 a {
+      font-family: DM Sans;
+      font-size: 24px;
+      font-weight: 700;
+      line-height: 31px;
+      text-align: left;
+      color: #FFFFFF;
+      
+
+ 
+}
+.footer1 .footer-links div p {
+      font-weight: 400;
+      font-size: 16px;
+      color: #DEDEDE;
+      text-wrap: wrap;
+}
+.footer1 .footer-links .images {
+    padding-left: 20px;
+    padding-top: 10px;
+    
+}
+.footer1 .footer-links .images img {
+    margin-left: 1rem;
+}
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 1000px) {
+    .subscribe .div1 {
+        height: fit-content;
+}
+.footer1 .footer-links div {
+    margin-left: 5rem;
+}
+
+}
+
+@media (max-width: 612px) {
+    .subscribe .div1 aside:nth-child(1) input{
+       width: 300px;
+    
+}
+    .subscribe .div1 {
+        margin: 7vw 20vw;
+    }
+    .footer1 .footer-links div {
+        margin-left: 3rem;
+    }
+}
